fix(chat): prevents text wrap and adds overflow ellipses.

--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -444,6 +444,13 @@ $radius-sign-warning: 18px;
       max-height: 96px;
       padding: 0;
 
+      &.ql-blank::before {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+      }
+
       p {
         word-break: break-all;
       }
